Make Java 17 compatible